--- a/src/split_corpus.ipynb
+++ b/src/split_corpus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,57 +18,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Train\n",
-    "\n",
     "# Extract the first 100,000 sentences from the Europarl corpus for training\n",
-    "europarl_train_100k_en = read_lines('../data/raw/Europarl.en-fr.en')[:100000]\n",
-    "europarl_train_100k_fr = read_lines('../data/raw/Europarl.en-fr.fr')[:100000]\n",
+    "europarl_train_100k_en = read_lines('../data/Europarl.en-fr.en')[:100000]\n",
+    "europarl_train_100k_fr = read_lines('../data/Europarl.en-fr.fr')[:100000]\n",
     "\n",
-    "write_lines('../data/clean/Europarl_train_100k.en', europarl_train_100k_en)\n",
-    "write_lines('../data/clean//Europarl_train_100k.fr', europarl_train_100k_fr)\n",
+    "write_lines('../data/raw/Europarl_train_100k.en', europarl_train_100k_en)\n",
+    "write_lines('../data/raw/Europarl_train_100k.fr', europarl_train_100k_fr)\n",
     "\n",
     "# Extract the first 10,000 sentences from the Emea corpus for training\n",
-    "emea_train_10k_en = read_lines('../data/raw/Emea.en-fr.en')[:10000]\n",
-    "emea_train_10k_fr = read_lines('../data/raw/Emea.en-fr.fr')[:10000]\n",
+    "emea_train_10k_en = read_lines('../data/Emea.en-fr.en')[:10000]\n",
+    "emea_train_10k_fr = read_lines('../data/Emea.en-fr.fr')[:10000]\n",
     "\n",
-    "write_lines('../data/clean/Emea_train_10k.en', emea_train_10k_en)\n",
-    "write_lines('../data/clean/Emea_train_10k.fr', emea_train_10k_fr)\n"
+    "write_lines('../data/raw/Emea_train_10k.en', emea_train_10k_en)\n",
+    "write_lines('../data/raw/Emea_train_10k.fr', emea_train_10k_fr)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Dev\n",
     "\n",
     "# Extract 3,750 sentences starting from the 100,001st sentence in the Europarl corpus for development\n",
-    "europarl_dev_3750_en = read_lines('../data/raw/Europarl.en-fr.en')[100000:103750]\n",
-    "europarl_dev_3750_fr = read_lines('../data/raw/Europarl.en-fr.fr')[100000:103750]\n",
+    "europarl_dev_3750_en = read_lines('../data/Europarl.en-fr.en')[100000:103750]\n",
+    "europarl_dev_3750_fr = read_lines('../data/Europarl.en-fr.fr')[100000:103750]\n",
     "\n",
     "# Save the Europarl development set\n",
-    "write_lines('../data/clean/Europarl_dev_3750.en', europarl_dev_3750_en)\n",
-    "write_lines('../data/clean/Europarl_dev_3750.fr', europarl_dev_3750_fr)\n"
+    "write_lines('../data/raw/Europarl_dev_3750.en', europarl_dev_3750_en)\n",
+    "write_lines('../data/raw/Europarl_dev_3750.fr', europarl_dev_3750_fr)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Test\n",
     "from sklearn.model_selection import train_test_split\n",
     "\n",
-    "europarl_en = read_lines('../data/raw/Europarl.en-fr.en')\n",
-    "europarl_fr = read_lines('../data/raw/Europarl.en-fr.fr')\n",
-    "emea_en = read_lines('../data/raw/Emea.en-fr.en')\n",
-    "emea_fr = read_lines('../data/raw/Emea.en-fr.fr')\n",
+    "europarl_en = read_lines('../data/Europarl.en-fr.en')\n",
+    "europarl_fr = read_lines('../data/Europarl.en-fr.fr')\n",
+    "emea_en = read_lines('../data/Emea.en-fr.en')\n",
+    "emea_fr = read_lines('../data/Emea.en-fr.fr')\n",
     "\n",
     "assert len(europarl_en) == len(europarl_fr)\n",
     "assert len(emea_en) == len(emea_fr)\n",
@@ -81,11 +80,11 @@
     "_, emea_en_test, _, emea_fr_test = train_test_split(\n",
     "    emea_en, emea_fr, test_size=500, random_state=42)\n",
     "\n",
-    "write_lines('../data/clean/Europarl_test_500.en', europarl_en_test)\n",
-    "write_lines('../data/clean/Europarl_test_500.fr', europarl_fr_test)\n",
+    "write_lines('../data/raw/Europarl_test_500.en', europarl_en_test)\n",
+    "write_lines('../data/raw/Europarl_test_500.fr', europarl_fr_test)\n",
     "\n",
-    "write_lines('../data/clean/Emea_test_500.en', emea_en_test)\n",
-    "write_lines('../data/clean/Emea_test_500.fr', emea_fr_test)\n"
+    "write_lines('../data/raw/Emea_test_500.en', emea_en_test)\n",
+    "write_lines('../data/raw/Emea_test_500.fr', emea_fr_test)\n"
    ]
   }
  ],
