recreate lemma data with spacy

--- a/src/lemma.ipynb
+++ b/src/lemma.ipynb
@@ -81,48 +81,74 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "import spacy\n",
+    "\n",
+    "nlp_en = spacy.load('en_core_web_sm')\n",
+    "\n",
+    "nlp_fr = spacy.load('fr_core_news_md')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "import os\n",
     "from nltk.tokenize import word_tokenize\n",
     "from nltk import pos_tag\n",
     "from nltk.stem import SnowballStemmer\n",
     "from nltk.corpus import wordnet\n",
     "\n",
+    "\n",
     "def process_folder(folder_path):\n",
-    "    lemma_folder = os.path.join(folder_path, 'lemma')\n",
+    "    lemma_folder = os.path.join(folder_path, 'spacy_lemma')\n",
     "    os.makedirs(lemma_folder, exist_ok=True)\n",
     "\n",
     "    for file_name in os.listdir(folder_path):\n",
-    "        if file_name.endswith('.en') or file_name.endswith('.fr'):  \n",
+    "        if file_name.endswith('.en') or file_name.endswith('.fr'):\n",
+    "            print(f\"Processing {file_name}\")\n",
     "            with open(os.path.join(folder_path, file_name), 'r', encoding='utf-8') as file:\n",
     "                output_file = os.path.join(lemma_folder, f\"{os.path.splitext(file_name)[0]}.lemma{os.path.splitext(file_name)[1]}\")\n",
     "                with open(output_file, 'w', encoding='utf-8') as out_file:\n",
     "                    for line in file:\n",
     "                        line = line.lower().strip()\n",
-    "                        words = word_tokenize(line)\n",
-    "                        tagged_words = pos_tag(words)\n",
-    "                        \n",
+    "                        if file_name.endswith('.en'):\n",
+    "                            doc = nlp_en(line)\n",
+    "                        elif file_name.endswith('.fr'):\n",
+    "                            doc = nlp_fr(line)\n",
+    "\n",
     "                        lemmatized_words = []\n",
-    "                        for word, pos in tagged_words:\n",
-    "                            if file_name.endswith('.en'):\n",
-    "                                pos = get_wordnet_pos(pos)\n",
-    "                                if pos:\n",
-    "                                    lemma = lemmatizer_en.lemmatize(word, pos)\n",
-    "                                else:\n",
-    "                                    lemma = word\n",
-    "                            elif file_name.endswith('.fr'):\n",
-    "                                pos = get_char_pos(pos)\n",
-    "                                if pos:\n",
-    "                                    lemma = lemmatizer_fr.lemmatize(word, pos)\n",
-    "                                else:\n",
-    "                                    lemma = word\n",
-    "                            lemmatized_words.append(lemma)\n",
+    "                        for token in doc:\n",
+    "                            lemmatized_words.append(token.lemma_)\n",
+    "                        # words = word_tokenize(line)\n",
+    "                        # tagged_words = pos_tag(words)\n",
+    "\n",
+    "                        \n",
+    "                        \n",
+    "                        # lemmatized_words = []\n",
+    "                        # for word, pos in tagged_words:\n",
+    "                        #     if file_name.endswith('.en'):\n",
+    "                        #         pos = get_wordnet_pos(pos)\n",
+    "                        #         if pos:\n",
+    "                        #             lemma = lemmatizer_en.lemmatize(word, pos)\n",
+    "                        #         else:\n",
+    "                        #             lemma = word\n",
+    "                        #     elif file_name.endswith('.fr'):\n",
+    "                        #         pos = get_char_pos(pos)\n",
+    "                        #         if pos:\n",
+    "                        #             lemma = lemmatizer_fr.lemmatize(word, pos)\n",
+    "                        #         else:\n",
+    "                        #             lemma = word\n",
+    "                        #     lemmatized_words.append(lemma)\n",
     "                        \n",
     "                        out_file.write(' '.join(lemmatized_words) + '\\n')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,15 +162,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Processing Emea_test_500.tok.true.clean.en\n",
+      "Processing Emea_test_500.tok.true.clean.fr\n",
+      "Processing Emea_train_10k.tok.true.clean.en\n",
+      "Processing Emea_train_10k.tok.true.clean.fr\n",
       "Processed ../data/clean\\Emea\n",
-      "Processed ../data/clean\\Europarl\n"
+      "Processing Europarl_dev_3750.tok.true.clean.en\n",
+      "Processing Europarl_dev_3750.tok.true.clean.fr\n",
+      "Processing Europarl_test_500.tok.true.clean.en\n",
+      "Processing Europarl_test_500.tok.true.clean.fr\n",
+      "Processing Europarl_train_100k.tok.true.clean.en\n"
      ]
     }
    ],
