train and get BLEU score

--- a/src/lemma.ipynb
+++ b/src/lemma.ipynb
@@ -178,7 +178,9 @@
       "Processing Europarl_dev_3750.tok.true.clean.fr\n",
       "Processing Europarl_test_500.tok.true.clean.en\n",
       "Processing Europarl_test_500.tok.true.clean.fr\n",
-      "Processing Europarl_train_100k.tok.true.clean.en\n"
+      "Processing Europarl_train_100k.tok.true.clean.en\n",
+      "Processing Europarl_train_100k.tok.true.clean.fr\n",
+      "Processed ../data/clean\\Europarl\n"
      ]
     }
    ],
